changed leaflet version

--- a/molenapplicatie.client/src/index.html
+++ b/molenapplicatie.client/src/index.html
@@ -5,12 +5,12 @@
   <title>MolenapplicatieClient</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="Assets/Icons/buurman-en-buurman.png" type="image/x-icon" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" />
+  <link rel="icon" href="Assets/Icons/buurman-en-buurman.png" type="image/x-icon">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="mat-typography">
   <h2>Buurman en Buurman molens</h2>
   <app-root></app-root>
-  <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
 </body>
 </html>
