--- a/molenapplicatie.client/src/index.html
+++ b/molenapplicatie.client/src/index.html
@@ -13,5 +13,7 @@
 <body class="mat-typography">
   <app-root></app-root>
   <div id="toast-container"></div>
+
+  <img class="gif" src="Assets/Background/Buurman-en-Buurman-anim-paint-200x188-1.gif" alt="Alternate Text" />
 </body>
 </html>
