Created better visible page

--- a/molenapplicatie.client/src/index.html
+++ b/molenapplicatie.client/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MolenapplicatieClient</title>
+  <title>Buurmans molens</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="Assets/Icons/buurman-en-buurman.png" type="image/x-icon">
